--- a/VPBSampler/Base.lproj/Main.storyboard
+++ b/VPBSampler/Base.lproj/Main.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8101.16"/>
     </dependencies>
     <scenes>
-        <!--Vimo Parallax View Controller-->
+        <!--Vimo Blur Header Table View View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="VimoParallaxViewController" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="VimoBlurHeaderTableViewViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
